    - It first asks the playercache on your server and if that fails it will ask the MojangAPI.
    - This will prepare your server for the day Towny switches to supporting UUIDs in the database.
    - Big thanks to creatorfromhell for his MojangAPI util.
  - New Config Option: plugin.database.gather_resident_uuids
    - default: true
    - When true Towny will use a background task to gather UUIDs for residents who do not have UUIDs.
0.96.2.5:
  - Minor task cleanup, courtesy of silverwolfg11 with PR #4174.
  - Make fields/objects that don't change Immutable, courtesy of Siris with PR #4171.
  - Fix HoverEvent deprecation and add adapter to for backwards compatibility, courtesy of Siris with PR #4173.
  - Fix nations not saving a true neutral status on flatfile databases.
  - Fix load error on databases where neutral nations are present.
  - Language files version bumped to 0.85.
  - Fix incorrect message confirming /plot set reset.
    - Closes #4179.
  - Unify Town and Nation code, and introduce new Eco Account Mechanics, courtesy of Siris with #3988.
  - New config option: economy.debt_prefix
    - default: "[DEBT]-"
    - The debt prefix for the debt eco account.
  - Fix loading system files when loading all townblocks, courtesy of Siris with PR #4182.
  - Move translation code to separate object and introduce new method: Translation.of(), courtesy of Siris with PR #4177.
  - Add Mayoral Succession, courtesy of DocW with PR #4107.
  - Fix stacktrace showing when /t {foo} hits an exception.
  - Clean up deprecated Assistant related code.
  - Add town.hasResidentWithRank(Resident, String);
0.96.2.6: 
  - Fix firespread bypass for obsidian and netherrack not working.
    - Closes #4199.
  - Make sure debt accounts start with zeroed out balance, courtesy of Siris with PR #4193.
    - Closes #4192.
    - Also fixes closed-economy-support.
    - Closes #4188.
0.96.2.7:
  - Fix %townyadvanced_nation_prefix% returning the nation prefix.
    - Closes #4202.